Fix dark mode

--- a/frontend/src/app/components/ModTitle.module.css
+++ b/frontend/src/app/components/ModTitle.module.css
@@ -1,6 +1,6 @@
 /* background + layout */
 .container {
-  background-color: white;
+  background-color: var(--background);
   width: 100%;
   position: relative;
   height: 32vh;
@@ -12,7 +12,7 @@
 /* text */
 .subtitle {
   font-size: 28px;
-  color: black;
+  color: var(--foreground);
   font-family: "DM Sans";
   margin-top: 20vh;
   margin-left: 8vw;
@@ -21,7 +21,7 @@
 
 .title {
   font-size: 40px;
-  color: black;
+  color: var(--foreground);
   font-family: "Rammetto One";
   margin-left: 8vw;
   margin-bottom: 10vh;
